--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ bootstrap4==0.1.0
 branca==0.4.2
 certifi==2021.10.8
 charset-normalizer==2.0.7
+dj-config-url==0.1.1
+dj-database-url==0.5.0
 Django==3.2.8
 django-bootstrap-datepicker-plus==3.0.5
 django-bootstrap4==3.0.1
@@ -14,6 +16,7 @@ folium==0.12.1
 geographiclib==1.52
 geopy==2.2.0
 gunicorn==20.1.0
+heroku==0.1.4
 idna==3.2
 iniconfig==1.1.1
 Jinja2==3.0.2
@@ -26,6 +29,7 @@ py==1.10.0
 pyparsing==2.4.7
 pytest==6.2.5
 pytest-django==4.4.0
+python-dateutil==1.5
 pytz==2021.3
 requests==2.26.0
 soupsieve==2.2.1
