--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,16 @@ attrs==21.2.0
 beautifulsoup4==4.10.0
 bootstrap4==0.1.0
 branca==0.4.2
+Brotli==1.0.9
 certifi==2021.10.8
 charset-normalizer==2.0.7
+crispy-bootstrap5==0.6
 dj-config-url==0.1.1
 dj-database-url==0.5.0
-Django==3.2.8
+Django==3.2.9
 django-bootstrap-datepicker-plus==3.0.5
 django-bootstrap4==3.0.1
+django-crispy-forms==1.13.0
 django-filter==21.1
 django-jquery==3.1.0
 folium==0.12.1
